--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion = '29.0.3'
     defaultConfig {
         applicationId "com.example.android.sunshine"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "com.jakewharton:butterknife:10.2.1"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor "com.jakewharton:butterknife-compiler:10.2.1"
 
     androidTestImplementation 'junit:junit:4.12'
