--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     implementation "com.jakewharton:butterknife:10.2.1"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor "com.jakewharton:butterknife-compiler:10.2.1"
+    implementation "com.google.android.material:material:1.1.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
