--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:10.2.1"
     implementation "com.google.android.material:material:1.1.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.preference:preference:1.1.1"
 
-    
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
